se crean validaciones de los DTO y controladores