@@ -1,4 +1,5 @@
 // RolController.java
+// RolController.java
 package com.celiahelp.controller;
 
 import com.celiahelp.dto.RolDTO;
@@ -7,11 +8,11 @@ import com.celiahelp.exception.ServiceException;
 import com.celiahelp.mapper.RolMapper;
 import com.celiahelp.model.Rol;
 import com.celiahelp.service.RolService;
+import jakarta.validation.Valid;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/roles")
@@ -25,31 +26,31 @@ public class RolController {
 
     @GetMapping
     public ResponseEntity<List<RolDTO>> getAll() throws ServiceException {
-        List<RolDTO> dtos = rolService.getAll().stream()
+        List<Rol> roles = rolService.getAll();
+        List<RolDTO> dtos = roles.stream()
                 .map(RolMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(dtos);
     }
 
     @GetMapping("/{id}")
-    public ResponseEntity<RolDTO> getById(@PathVariable Long id)
-            throws ServiceException, NotFoundException {
+    public ResponseEntity<RolDTO> getById(@PathVariable Long id) throws ServiceException, NotFoundException {
         Rol rol = rolService.getById(id);
         return ResponseEntity.ok(RolMapper.toDTO(rol));
     }
 
     @PostMapping
-    public ResponseEntity<RolDTO> create(@RequestBody RolDTO rolDTO)
-            throws ServiceException {
-        Rol created = rolService.create(RolMapper.toEntity(rolDTO));
+    public ResponseEntity<RolDTO> create(@Valid @RequestBody RolDTO rolDTO) throws ServiceException {
+        Rol rol = RolMapper.toEntity(rolDTO);
+        Rol created = rolService.create(rol);
         return ResponseEntity.status(201).body(RolMapper.toDTO(created));
     }
 
     @PutMapping("/{id}")
-    public ResponseEntity<RolDTO> update(@PathVariable Long id,
-                                         @RequestBody RolDTO rolDTO)
+    public ResponseEntity<RolDTO> update(@PathVariable Long id, @Valid @RequestBody RolDTO rolDTO)
             throws ServiceException, NotFoundException {
-        Rol updated = rolService.update(id, RolMapper.toEntity(rolDTO));
+        Rol rol = RolMapper.toEntity(rolDTO);
+        Rol updated = rolService.update(id, rol);
         return ResponseEntity.ok(RolMapper.toDTO(updated));
     }
 
